test/spec_vectors/func_ptrs/fail/module_4.wat
(module (table 1 funcref) (elem (i32.ctz (i32.const 0))))